# plugin1

./: CMakeLists.txt  README.md
EQF1 - Copy/: CMakeLists.txt  README.md
EQF1 - Copy/source/: myplugincids.h  myplugincontroller.cpp  myplugincontroller.h  mypluginentry.cpp  mypluginprocessor.cpp  mypluginprocessor.h  version.h
program_rozpoznawczy/: README.md  fft.cpp  makefile  projekt.cpp  signal.cpp  signal.h
resource/: myplugineditor.uidesc
source/: myplugincids.h  myplugincontroller.cpp  myplugincontroller.h  mypluginentry.cpp  mypluginprocessor.cpp  mypluginprocessor.h  version.h
